src/demo-app/backend/templates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
  labels:
    app: demo-backend-label
spec:
  replicas: 1
  selector:
    matchLabels:
      service: demo-backend
  template:
    metadata:
      labels:
        app: demo-backend-label
        service: demo-backend
    spec:
      containers:
        - name: demo-backend
          image: placeholder:placeholder
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 400m
              memory: 400Mi
