src/demo-app/backend/templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
  labels:
    app: demo-backend-label
    service: demo-backend
spec:
  type: NodePort
  selector:
    app: demo-backend-label
    service: demo-backend
  ports:
    - name: http
      protocol: TCP
      port: 46001
      targetPort: 8080
